--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts",
     "test": "jest --no-cache",
     "build": "tsc",
-    "prod": "npm run build && node dist/index.js"
+    "prod": "npm run build && node dist/src/index.js"
   },
   "jest": {
     "transform": {
@@ -27,14 +27,16 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "express": "^4.16.4",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.3.3"
+  },
+  "devDependencies": {
     "@types/jest": "^23.0.0",
     "@types/supertest": "^2.0.7",
-    "express": "^4.16.4",
     "jest": "^23.0.0",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^8.0.2",
-    "typescript": "^3.3.3"
+    "ts-jest": "^23.10.5"
   }
 }
